tests/stage3/semantic_struct_field_assign_bool.err
type error
line: 9
assignment type mismatch
expected: i32
got: bool
