tests/stage3/semantic_struct_field_assign_bool.imp
module app.main

struct Point {
    x: i32
}

function main() {
    variable p: Point = Point { x: 1 }
    p.x = true
}
